// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dynamic imports babel transforms example test case: browser-current-esm 1`] = `
[
  "esm/bundle-2755d629.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-2755d629.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-esm 2`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

import('./bundle-2755d629.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-2755d629.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-lib 1`] = `
[
  "lib/bundle-95bdd02d.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-95bdd02d.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-lib 2`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

import('./bundle-95bdd02d.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-95bdd02d.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-umd 1`] = `
[
  "umd/bundle-d2cb7eea.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-d2cb7eea.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-umd 2`] = `
[
  "umd/index-browser-current-umd.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: umd

import('./bundle-d2cb7eea.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-d2cb7eea.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/bundle-29456503.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-29456503.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-esm 2`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

import('./bundle-29456503.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-29456503.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/bundle-f0972dea.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-f0972dea.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-lib 2`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

import('./bundle-f0972dea.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-f0972dea.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/bundle-67dc240c.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-67dc240c.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-umd 2`] = `
[
  "umd/index-browser-experimental-umd.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: umd

import('./bundle-67dc240c.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-67dc240c.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/bundle-ac4ca321.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-ac4ca321.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-esm 2`] = `
[
  "esm/index-browser-legacy-esm.js",
  "var _this = this;
function _newArrowCheck(innerThis, boundThis) { if (innerThis !== boundThis) { throw new TypeError("Cannot instantiate an arrow function"); } }
// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

import('./bundle-ac4ca321.js').then(function (result) {
  _newArrowCheck(this, _this);
  result.foo();
}.bind(this));
import( /* webpackChunkName: "helpers" */'./bundle-ac4ca321.js').then(function (_ref) {
  _newArrowCheck(this, _this);
  var bar = _ref.bar;
  bar();
}.bind(this));
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/bundle-e11d4a53.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-e11d4a53.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-lib 2`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

var _this = this;
function _newArrowCheck(innerThis, boundThis) { if (innerThis !== boundThis) { throw new TypeError("Cannot instantiate an arrow function"); } }
import('./bundle-e11d4a53.js').then(function (result) {
  _newArrowCheck(this, _this);
  result.foo();
}.bind(this));
import( /* webpackChunkName: "helpers" */'./bundle-e11d4a53.js').then(function (_ref) {
  _newArrowCheck(this, _this);
  var bar = _ref.bar;
  bar();
}.bind(this));
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/bundle-5227132a.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-5227132a.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-umd 2`] = `
[
  "umd/index-browser-legacy-umd.js",
  "var _this = this;
function _newArrowCheck(innerThis, boundThis) { if (innerThis !== boundThis) { throw new TypeError("Cannot instantiate an arrow function"); } }
// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: umd

import('./bundle-5227132a.js').then(function (result) {
  _newArrowCheck(this, _this);
  result.foo();
}.bind(this));
import( /* webpackChunkName: "helpers" */'./bundle-5227132a.js').then(function (_ref) {
  _newArrowCheck(this, _this);
  var bar = _ref.bar;
  bar();
}.bind(this));
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-esm 1`] = `
[
  "esm/bundle-e75df5cc.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-e75df5cc.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-esm 2`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

import('./bundle-e75df5cc.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-e75df5cc.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-lib 1`] = `
[
  "lib/bundle-92be6b3d.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-92be6b3d.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-lib 2`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

import('./bundle-92be6b3d.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-92be6b3d.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-umd 1`] = `
[
  "umd/bundle-911ab4c8.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-911ab4c8.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-umd 2`] = `
[
  "umd/index-browser-stable-umd.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: umd

import('./bundle-911ab4c8.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-911ab4c8.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-current-esm 1`] = `
[
  "esm/bundle-d65af2bf.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-d65af2bf.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-current-esm 2`] = `
[
  "esm/index-electron-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm

import('./bundle-d65af2bf.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-d65af2bf.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-current-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-current-lib 1`] = `
[
  "lib/bundle-2a40adc9.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-2a40adc9.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-current-lib 2`] = `
[
  "lib/index-electron-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib

'use strict';

import('./bundle-2a40adc9.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-2a40adc9.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-current-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-experimental-esm 1`] = `
[
  "esm/bundle-9c86223f.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-9c86223f.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-experimental-esm 2`] = `
[
  "esm/index-electron-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm

import('./bundle-9c86223f.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-9c86223f.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-experimental-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-experimental-lib 1`] = `
[
  "lib/bundle-4903b874.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-4903b874.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-experimental-lib 2`] = `
[
  "lib/index-electron-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib

'use strict';

import('./bundle-4903b874.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-4903b874.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-legacy-esm 1`] = `
[
  "esm/bundle-fa788f98.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-fa788f98.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-legacy-esm 2`] = `
[
  "esm/index-electron-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm

import('./bundle-fa788f98.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-fa788f98.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-legacy-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-legacy-lib 1`] = `
[
  "lib/bundle-4c7325f0.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-4c7325f0.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-legacy-lib 2`] = `
[
  "lib/index-electron-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib

'use strict';

import('./bundle-4c7325f0.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-4c7325f0.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-stable-esm 1`] = `
[
  "esm/bundle-90e23c62.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-90e23c62.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-stable-esm 2`] = `
[
  "esm/index-electron-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

import('./bundle-90e23c62.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-90e23c62.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-stable-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-stable-lib 1`] = `
[
  "lib/bundle-8a2525df.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-8a2525df.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-stable-lib 2`] = `
[
  "lib/index-electron-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

import('./bundle-8a2525df.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-8a2525df.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-stable-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-current-lib 1`] = `
[
  "lib/bundle-b7039f8d.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-b7039f8d.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-current-lib 2`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-b7039f8d.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-b7039f8d.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-experimental-lib 1`] = `
[
  "lib/bundle-6dcdf788.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-6dcdf788.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-experimental-lib 2`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-6dcdf788.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-6dcdf788.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-legacy-lib 1`] = `
[
  "lib/bundle-5d14f2c8.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-5d14f2c8.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-legacy-lib 2`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-5d14f2c8.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-5d14f2c8.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-stable-lib 1`] = `
[
  "lib/bundle-267c8e5c.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-267c8e5c.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-stable-lib 2`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-267c8e5c.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-267c8e5c.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-cjs 1`] = `
[
  "cjs/bundle-cc7153e4.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-cc7153e4.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-current-cjs.cjs';",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-cjs 3`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

import('./bundle-cc7153e4.cjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-cc7153e4.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-lib 1`] = `
[
  "lib/bundle-a388cb0a.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-a388cb0a.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-lib 2`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

import('./bundle-a388cb0a.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-a388cb0a.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-mjs 1`] = `
[
  "mjs/bundle-91cd6969.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-91cd6969.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-mjs 2`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

import('./bundle-91cd6969.mjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-91cd6969.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/bundle-55ad26c5.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-55ad26c5.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-experimental-cjs.cjs';",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-cjs 3`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

import('./bundle-55ad26c5.cjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-55ad26c5.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-lib 1`] = `
[
  "lib/bundle-6e7d78eb.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-6e7d78eb.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-lib 2`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

import('./bundle-6e7d78eb.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-6e7d78eb.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/bundle-c2835fac.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-c2835fac.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-mjs 2`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

import('./bundle-c2835fac.mjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-c2835fac.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/bundle-9c5eecd8.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-9c5eecd8.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-legacy-cjs.cjs';",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-cjs 3`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

import('./bundle-9c5eecd8.cjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-9c5eecd8.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-lib 1`] = `
[
  "lib/bundle-d1e21087.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-d1e21087.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-lib 2`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

import('./bundle-d1e21087.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-d1e21087.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/bundle-182d2f21.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-182d2f21.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-mjs 2`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

import('./bundle-182d2f21.mjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-182d2f21.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/bundle-7903ba5c.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-7903ba5c.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-stable-cjs.cjs';",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-cjs 3`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

import('./bundle-7903ba5c.cjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-7903ba5c.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-lib 1`] = `
[
  "lib/bundle-b54795a0.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-b54795a0.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-lib 2`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

import('./bundle-b54795a0.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-b54795a0.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/bundle-e4cd43cf.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-e4cd43cf.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-mjs 2`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

import('./bundle-e4cd43cf.mjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-e4cd43cf.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-esm 1`] = `
[
  "esm/bundle-f138f6a8.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-f138f6a8.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-esm 2`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
import('./bundle-f138f6a8.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-f138f6a8.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-lib 1`] = `
[
  "lib/bundle-818b27e2.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-818b27e2.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-lib 2`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
import('./bundle-818b27e2.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-818b27e2.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-umd 1`] = `
[
  "umd/bundle-e23d2554.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        bar: ()=>bar,
        foo: ()=>foo
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-e23d2554.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-umd 2`] = `
[
  "umd/index-browser-current-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    import('./bundle-e23d2554.js').then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ './bundle-e23d2554.js').then(({ bar  })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/bundle-b169a69b.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-b169a69b.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-esm 2`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
import('./bundle-b169a69b.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-b169a69b.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/bundle-b2bc6bd5.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-b2bc6bd5.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-lib 2`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
import('./bundle-b2bc6bd5.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-b2bc6bd5.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/bundle-e23d2554.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        bar: ()=>bar,
        foo: ()=>foo
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-e23d2554.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-umd 2`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    import('./bundle-e23d2554.js').then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ './bundle-e23d2554.js').then(({ bar  })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/bundle-3e797347.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-3e797347.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-esm 2`] = `
[
  "esm/index-browser-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
import('./bundle-3e797347.js').then(function(result) {
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-3e797347.js').then(function(param) {
    var bar = param.bar;
    bar();
});
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/bundle-d39f2a07.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-d39f2a07.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-lib 2`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';
import('./bundle-d39f2a07.js').then(function(result) {
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-d39f2a07.js').then(function(param) {
    var bar = param.bar;
    bar();
});
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/bundle-b2e77bb6.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        bar: function() {
            return bar;
        },
        foo: function() {
            return foo;
        }
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-b2e77bb6.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-umd 2`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    import('./bundle-b2e77bb6.js').then(function(result) {
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ './bundle-b2e77bb6.js').then(function(param) {
        var bar = param.bar;
        bar();
    });
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-esm 1`] = `
[
  "esm/bundle-a0331695.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-a0331695.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-esm 2`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
import('./bundle-a0331695.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-a0331695.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-lib 1`] = `
[
  "lib/bundle-20370263.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-20370263.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-lib 2`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
import('./bundle-20370263.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-20370263.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-umd 1`] = `
[
  "umd/bundle-e23d2554.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        bar: ()=>bar,
        foo: ()=>foo
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-e23d2554.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-umd 2`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    import('./bundle-e23d2554.js').then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ './bundle-e23d2554.js').then(({ bar  })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-current-esm 1`] = `
[
  "esm/bundle-0e22177c.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-0e22177c.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-current-esm 2`] = `
[
  "esm/index-electron-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm
import('./bundle-0e22177c.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-0e22177c.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-electron-current-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-current-lib 1`] = `
[
  "lib/bundle-0f05df70.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-0f05df70.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-current-lib 2`] = `
[
  "lib/index-electron-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib
'use strict';
import('./bundle-0f05df70.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-0f05df70.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-electron-current-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-experimental-esm 1`] = `
[
  "esm/bundle-760a74b4.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-760a74b4.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-experimental-esm 2`] = `
[
  "esm/index-electron-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm
import('./bundle-760a74b4.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-760a74b4.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-electron-experimental-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-experimental-lib 1`] = `
[
  "lib/bundle-4c9550cb.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-4c9550cb.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-experimental-lib 2`] = `
[
  "lib/index-electron-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib
'use strict';
import('./bundle-4c9550cb.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-4c9550cb.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-electron-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-legacy-esm 1`] = `
[
  "esm/bundle-a1efeb31.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-a1efeb31.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-legacy-esm 2`] = `
[
  "esm/index-electron-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm
import('./bundle-a1efeb31.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-a1efeb31.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-electron-legacy-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-legacy-lib 1`] = `
[
  "lib/bundle-c42cc57f.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-c42cc57f.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-legacy-lib 2`] = `
[
  "lib/index-electron-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib
'use strict';
import('./bundle-c42cc57f.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-c42cc57f.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-electron-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-stable-esm 1`] = `
[
  "esm/bundle-b7ad37aa.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-b7ad37aa.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-stable-esm 2`] = `
[
  "esm/index-electron-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm
import('./bundle-b7ad37aa.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-b7ad37aa.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-electron-stable-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-stable-lib 1`] = `
[
  "lib/bundle-8b301a85.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-8b301a85.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-stable-lib 2`] = `
[
  "lib/index-electron-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib
'use strict';
import('./bundle-8b301a85.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-8b301a85.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-electron-stable-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-current-lib 1`] = `
[
  "lib/bundle-e2e71871.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-e2e71871.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-current-lib 2`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
Promise.resolve().then(()=>require('./bundle-e2e71871.js')).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ './bundle-e2e71871.js')).then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-experimental-lib 1`] = `
[
  "lib/bundle-3ea4f381.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-3ea4f381.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-experimental-lib 2`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
Promise.resolve().then(()=>require('./bundle-3ea4f381.js')).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ './bundle-3ea4f381.js')).then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-legacy-lib 1`] = `
[
  "lib/bundle-82543cc5.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-82543cc5.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-legacy-lib 2`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
'use strict';
Promise.resolve().then(()=>require('./bundle-82543cc5.js')).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ './bundle-82543cc5.js')).then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-stable-lib 1`] = `
[
  "lib/bundle-c101e488.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-c101e488.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-stable-lib 2`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
Promise.resolve().then(()=>require('./bundle-c101e488.js')).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ './bundle-c101e488.js')).then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-cjs 1`] = `
[
  "cjs/bundle-aab517bb.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-aab517bb.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-current-cjs.cjs';",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-cjs 3`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
import('./bundle-aab517bb.cjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-aab517bb.cjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-lib 1`] = `
[
  "lib/bundle-0249d878.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-0249d878.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-lib 2`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
import('./bundle-0249d878.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-0249d878.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-mjs 1`] = `
[
  "mjs/bundle-a6a28363.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-a6a28363.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-mjs 2`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
import('./bundle-a6a28363.mjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-a6a28363.mjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/bundle-5db749e8.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-5db749e8.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-experimental-cjs.cjs';",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-cjs 3`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
import('./bundle-5db749e8.cjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-5db749e8.cjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-lib 1`] = `
[
  "lib/bundle-2106f853.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-2106f853.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-lib 2`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
import('./bundle-2106f853.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-2106f853.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/bundle-e35310ac.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-e35310ac.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-mjs 2`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
import('./bundle-e35310ac.mjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-e35310ac.mjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/bundle-37fb9b69.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-37fb9b69.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-legacy-cjs.cjs';",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-cjs 3`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
'use strict';
import('./bundle-37fb9b69.cjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-37fb9b69.cjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-lib 1`] = `
[
  "lib/bundle-560e9dac.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-560e9dac.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-lib 2`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
'use strict';
import('./bundle-560e9dac.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-560e9dac.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/bundle-f9bec76a.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-f9bec76a.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-mjs 2`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
import('./bundle-f9bec76a.mjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-f9bec76a.mjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/bundle-19351a45.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-19351a45.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-stable-cjs.cjs';",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-cjs 3`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
import('./bundle-19351a45.cjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-19351a45.cjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-lib 1`] = `
[
  "lib/bundle-2a96e413.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-2a96e413.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-lib 2`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
import('./bundle-2a96e413.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-2a96e413.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/bundle-12a18185.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-12a18185.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-mjs 2`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
import('./bundle-12a18185.mjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-12a18185.mjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;
